name:                MiniJava
version:             0.1.0.0
synopsis:            A MiniJava compiler
description:         Compiles MiniJava (a subset of Java) to MIPS assembly
author:              Chris Wendt
maintainer:          chrismwendt@gmail.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.8

executable MiniJava
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , pretty-show
                     , fgl
                     , parsec
                     , process
                     , monad-loops
                     , bifunctors
                     , lens
                     , optparse-applicative
                     , mtl
                     , multimap
                     , disjoint-set
                     , transformers
                     , safe
                     , pretty
